<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Here Now</string>
    <string name="widget_description">Daily non-dual pointing for your home screen</string>
</resources>
